Split LocalFS/File - Vfs2FS/File; add fs and path to FuseboxFile